--- a/ecom1/index.html
+++ b/ecom1/index.html
@@ -2,13 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Examensarbete</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/ecom1/src/Components/styles/footer.css">
+    <title>Happy Scribbles</title>
   </head>
   <body>
     <div id="root"></div>
+    <footer class="footer">
+      <ul class="footer-links">
+        <li><a href="/" class="nav-link">Hem</a></li>
+        <li><a href="/aboutUs" className="nav-link">Om oss</a></li>
+        <li><a href="/products" class="nav-link">Produkter</a></li>
+        <!-- <li><a href="/Contact" class="nav-link">Kontakt</a></li> -->
+      </ul>
+
+      <div class="social-icons">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+      </div>
+
+      <p class="copyright">© 2025 Happy Scribbles. Alla rättigheter förbehållna.</p>
+    </footer>
+
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
