--- a/ecom1/index.html
+++ b/ecom1/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/ecom1/src/Components/styles/footer.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./src/Components/styles/footer.css">
     <title>Happy Scribbles</title>
     <script type="text/javascript">
       // Hantera omdirigeringen från 404.html
@@ -29,9 +29,9 @@
     <div id="root"></div>
     <footer class="footer">
       <ul class="footer-links">
-        <li><a href="/" class="nav-link">Hem</a></li>
-        <li><a href="/aboutUs" className="nav-link">Om oss</a></li>
-        <li><a href="/products" class="nav-link">Produkter</a></li>
+        <li><a href="/examensarbete" class="nav-link">Hem</a></li>
+        <li><a href="/examensarbete/aboutUs" class="nav-link">Om oss</a></li>
+        <li><a href="/examensarbete/products" class="nav-link">Produkter</a></li>
         <!-- <li><a href="/Contact" class="nav-link">Kontakt</a></li> -->
       </ul>
 
@@ -44,7 +44,7 @@
       <p class="copyright">© 2025 Happy Scribbles. Alla rättigheter förbehållna.</p>
     </footer>
 
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
